--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,72 @@
-.App {
-  text-align: center;
+body {
+  /* background-color: #d2f2c2; */
+  /* background: linear-gradient(to right, #485563, #29323c); */
+  /* background: linear-gradient(to right, #fbd3e9, #bb377d); */
+  background: linear-gradient(to right, #c9ffbf, #ffafbd);
+  margin: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.container {
   display: flex;
-  flex-direction: column;
+  justify-content: space-around;
   align-items: center;
+  flex-wrap: wrap;
+}
+
+footer {
+  width: 100%;
+  background-color: #393e46;
+  /* margin: 0 -20px -20px -20px; */
+  height: 75px;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+}
+
+footer button {
+  background: transparent;
+  outline: none;
+  border: #ffcb05 solid 2px;
   color: white;
+  padding: 0.5rem 1rem;
+  font-size: 1.2rem;
+  transition: 0.3s ease all;
+  border-radius: 5px;
 }
 
-.App-link {
-  color: #61dafb;
+footer button:hover {
+  cursor: pointer;
+  background-color: #ffcb05;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
+.next {
+  margin-left: 50px;
+}
+
+.previous {
+  margin-right: 50px;
+}
+
+.loadingContainer {
+  height: calc(100vh - 175px);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loader {
+  width: 100px;
+  height: 100px;
+  border: 5px solid #ffcb05;
+  border-top: transparent;
+  border-radius: 50%;
+  animation-name: loading;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+
+@keyframes loading {
+  100% {
     transform: rotate(360deg);
   }
 }
