--- a/src/App.css
+++ b/src/App.css
@@ -61,8 +61,9 @@ footer button:hover {
   border-top: transparent;
   border-radius: 50%;
   animation-name: loading;
-  animation-duration: 2s;
+  animation-duration: 1s;
   animation-iteration-count: infinite;
+  animation-timing-function: ease-in;
 }
 
 @keyframes loading {
