--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@ body {
   /* background: linear-gradient(to right, #fbd3e9, #bb377d); */
   background: linear-gradient(to right, #c9ffbf, #ffafbd);
   margin: 0;
+  user-select: none;
 }
 
 .container {
@@ -11,59 +12,18 @@ body {
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-}
-
-footer {
-  width: 100%;
-  background-color: #393e46;
-  /* margin: 0 -20px -20px -20px; */
-  height: 75px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-footer button {
-  background: transparent;
-  outline: none;
-  border: #ffcb05 solid 2px;
-  color: white;
-  padding: 0.5rem 1rem;
-  font-size: 1.2rem;
-  transition: 0.3s ease all;
-  border-radius: 5px;
-}
-
-footer button:hover {
-  cursor: pointer;
-  background-color: #ffcb05;
-}
-
-.next {
-  margin-left: 50px;
-}
-
-.previous {
-  margin-right: 50px;
-}
-
-.loadingContainer {
-  height: cal(100vh-175px);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  overflow-x: hidden;
 }
 
 .loader {
+  margin: 10% auto;
+  display: block;
   width: 100px;
   height: 100px;
-  border: 5px solid #ffcb05;
-  border-top: transparent;
+  border: 5px solid gold;
   border-radius: 50%;
-  animation-name: loading;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in;
+  border-top: none;
+  animation: loading 2s ease infinite;
 }
 
 @keyframes loading {
